--- a/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.css
+++ b/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.css
@@ -5,6 +5,7 @@ h1{
     max-height: 180px;
     margin-bottom: 0px;
     letter-spacing: -11px;
+    color: #8bc34a;
 }
 h2{
     position: absolute;
