--- a/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
+++ b/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 
     <div class='spotbie-welcome-wrapper'>
 
-        <h1>Spotbie</h1>
+        <h1>SpotBie</h1>
     
         <h2>
             The World Is Yours
@@ -12,11 +12,11 @@
         <div class='spotbie-flash-card animated flipInX' [ngStyle]="whichCard(0)">
 
             <h3>
-                Welcome to Spotbie
+                Welcome to SpotBie
             </h3>
 
             <p>
-                Spotbie uses your location to find nearby users, retail shops, places to eat, and events.
+                SpotBie uses your location to find nearby users, retail shops, places to eat, and events.
             </p>
 
             <div class='sb-button' (click)="switchCard()">Let's Go!</div>
