--- a/src/app/spotbie/features/features.component.html
+++ b/src/app/spotbie/features/features.component.html
@@ -3,4 +3,4 @@
 
 </div>
 
-<div class="sb-closeButton" (click)="closeWindow()">close</div>
+<div class="sb-closeButton" (click)="closeWindow()"><i class="fa fa-times"></i></div>
