--- a/src/app/spotbie/map/info-object/info-object.component.html
+++ b/src/app/spotbie/map/info-object/info-object.component.html
@@ -9,14 +9,14 @@
     <div class='spotbie-album-media-image-wrapper' 
             *ngIf="info_object !== null && info_object !== undefined">
 
-        <div class='spotbie-info-object-title' (click)="visitInfoObjectPage()">
+        <div class='spotbie-info-object-title'>
             {{ info_object.name }}
             <span class='spotbie-search-result-price' *ngIf="info_object.price_on == '1'">({{ info_object.price }})</span>
         </div>
 
         <div class='spotbie-info-object-image' [ngStyle]="{ 'background' : 'url(' + infoObjectImageUrl + ')'}"></div>
     
-        <div *ngIf="infoObject !== null && infoObject.hours !== undefined" (click)="visitInfoObjectPage()">
+        <div *ngIf="infoObject !== null && infoObject.hours !== undefined">
 
             <div class='spotbie-info-object-open' *ngIf="!infoObject.isOpenNow">
                 CLOSED <span class='fa fa-circle spotbie-is-closed'></span>
@@ -49,12 +49,12 @@
 
             <table class='spotbie-yelp-rating-table'>
                 <tr>
-                <td>
-                    <div class='spotbie-search-result-rating-img' [ngStyle]="{ 'background' : 'url(' + info_object.rating_image + ')' }"></div>
-                </td>
-                <td>
-                    <div class='spotbie-search-result-yelp-logo' [ngStyle]="{ 'background' : 'url(assets/images/yelp/yelp_logo.png)' }"></div>
-                </td>
+                    <td>
+                        <div class='spotbie-search-result-rating-img' [ngStyle]="{ 'background' : 'url(' + info_object.rating_image + ')' }"></div>
+                    </td>
+                    <td>
+                        <div class='spotbie-search-result-yelp-logo' [ngStyle]="{ 'background' : 'url(assets/images/yelp/yelp_logo.png)' }"></div>
+                    </td>
                 </tr>
             </table>
 
@@ -93,6 +93,8 @@
             </div>
 
             <i class="fa fa-map-marker" aria-hidden="true" (click)="openWithGoogleMaps()"></i>
+
+            <i class="fa fa-globe" aria-hidden="true" (click)="visitInfoObjectPage()"></i>
 
             <div class='spotbie-distance'>Start Navigation</div>
 
