--- a/src/app/spotbie/profile-header/profile-header.component.html
+++ b/src/app/spotbie/profile-header/profile-header.component.html
@@ -131,8 +131,7 @@
 
         <app-albums [publicProfileInfo]="publicProfileInfo"
                     [album_id]="album_id"
-                    [album_media_id]="album_media_id"
-                    *ngIf="(publicProfileInfo !== undefined && publicProfileInfo.user.username == '0456fra') || user.username == '0456fra'"></app-albums>
+                    [album_media_id]="album_media_id"></app-albums>
         
     </div>
     
