--- a/src/app/streamer/streamer.component.scss
+++ b/src/app/streamer/streamer.component.scss
@@ -141,8 +141,6 @@
     margin: 0 auto;
     margin-top: -20px;
     min-height: 150px;
-    height: 150px;
-    max-height: 150px;
     width: 100%;
     min-width: 100%;
     max-width: 100%;
@@ -162,8 +160,8 @@
     min-height: 150px;
     height: 150px;
     max-height: 150px;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 2px;
+    margin-right: 2px;        
     cursor: pointer;
 }
 .spotbie-stream-post-extra-media-image-thumbnail{
