--- a/src/app/spotbie/profile-header/profile-header.component.html
+++ b/src/app/spotbie/profile-header/profile-header.component.html
@@ -129,9 +129,9 @@
 
         </table>        
 
-        <app-albums [publicProfileInfo]="publicProfileInfo"
+        <!--<app-albums [publicProfileInfo]="publicProfileInfo"
                     [album_id]="album_id"
-                    [album_media_id]="album_media_id"></app-albums>
+                    [album_media_id]="album_media_id"></app-albums>-->
         
     </div>
     
