--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,6 +5,6 @@
 
 .sb-backgroundImg {
 
-    background: url(/assets/images/background.png)
+    background: url(../../assets/images/background.png)
 
 }
